--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,8 +108,15 @@ html,
 body {
   scroll-behavior: smooth;
   overscroll-behavior-y: none;
-  height: 100vh;
-  overflow: hidden;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+#__next {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .snap-y {
